// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complexModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::complexModule>>
 * BESPOKE<<TEST1, test2, 3tESt3>>
 * SIGNED<<agj9jqKdZOjYSNKIF5t6SqEYdoUsB/l5KND7BG344VYBtn4lcyTWaDrrYEhox9kmprWk2dO0b16p0LHB09WRrA==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */
/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */
let mutableVariable: number | null | undefined = 1;
export const exportedVariable: string;
/* BESPOKE START <<3tESt3>> */
/* BESPOKE END <<3tESt3>> */
const immutableVariable: string | undefined = \\"TEST\\";
"
`;

exports[`contentModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::contentModule>>
 * BESPOKE<<TEST1, test2>>
 * SIGNED<<NfBFCBG5Qpw9WVyjQk7VNNcIB3HEZ30PQyVyZ/qjt89MsnKFzkZRQtnLrGHWOlLzg7WunFcKApub8UpgzBq/oQ==>>
 */

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */
export const exportedVariable: string;
const immutableVariable: string | undefined = \\"TEST\\";
let mutableVariable: number | null | undefined = 1;
/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */
"
`;

exports[`emptyModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::emptyModule>>
 * SIGNED<<vmiIOMqGhuXJBom/KrWFzvETfJmbSMcLkvZ6XDTcFWl7XRHJgu1tcb4eHn97TgcziEqpfD96M5qO0DV3z3S+CQ==>>
 */
"
`;

exports[`importModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::importModule>>
 * SIGNED<<EJWOrRMLAeusKmK7X5+JjyKfAKF8ryn6DAAEwIiaXsQogb/SSONlan944YLt/m93dE2HDU38Me1lqSA0C05OZQ==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";
"
`;
